Merge pull request #5 from Oketha-Senadheera/revert-4-copilot/fix-symbol-method-errors
Revert "Fix Java 8 compatibility issues - replace Java 9+ and Java 11+ methods" Oketha-Senadheera/resqnet@7f5a2c6fa863192c98730cd532d3a097694b21a5